--- a/.github/workflows/endToEnd.yml
+++ b/.github/workflows/endToEnd.yml
@@ -4,11 +4,8 @@ on:
       extraParameters:
         description: 'Extra Cypress parameters'
         required: false
-        default: 'false'
-        type: choice
-        options:        
-        - baseMap.feature
-        - auth.feature
+        default: ''
+        type: string
   push:
     branches:
       - master
@@ -76,27 +73,15 @@ jobs:
           echo It runs in the container instead of the VM.
         name: Run in container
 
-      - name: Cypress run option selected
-        if: ${{ inputs.extraParameters }} == true
+      - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          command: npm run cypress:ci -- --browser chrome --spec 'cypress/integration/${{ inputs.extraParameters }}'
+          command: npm run cypress:ci -- --browser chrome ${{ inputs.extraParameters }}
           record: true
         env:
-           CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
-           GITHUB_TOKEN:  ${{secrets.GITHUB_TOKEN}}
-        
-      - name: Cypress run without option selected
-        if: ${{ inputs.extraParameters }} == false
-        uses: cypress-io/github-action@v4
-        with:
-          command: npm run cypress:ci -- --browser chrome
-          record: true
-        env:
-           CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
-           GITHUB_TOKEN:  ${{secrets.GITHUB_TOKEN}}
-                                         
-
+             CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
+             GITHUB_TOKEN:  ${{secrets.GITHUB_TOKEN}}
+           
       # - name: kill vpn
       #   if: always()
       #   run: |
